# faltbar

./: .eslintrc.js  .gitignore  README.md  build.sh  meson.build  package-lock.json  package.json  tsconfig.json
app/: docks.c  main.c  meson.build
app/webkit-extension/: click-extension.c  click-extension.h  meson.build
public/: index.html
src/: App.vue  Faltbar.vue  global.d.ts  main.js  main.ts  webkit.js
src/assets/: fonts.scss
src/components/: Bar.vue  CPU.vue  FocusedWindow.vue  Memory.vue  Module.vue  NetworkManager.vue  NetworkManagerConnection.vue  Spotify.vue  Temperature.vue  Time.vue  Workspace.vue  WorkspaceWindow.vue  Workspaces.vue
src/components/app/: Bar.vue  Module.vue
src/components/global/: Dropdown.vue  Icon.vue  Progress.vue
src/components/plugins/CPU/: index.vue
src/components/plugins/Dashboard/: index.vue
src/components/plugins/FocusedWindow/: index.vue
src/components/plugins/Launcher/: index.vue
src/components/plugins/Memory/: index.vue
src/components/plugins/NetworkManager/: index.vue  item.vue
src/components/plugins/Spotify/: index.vue
src/components/plugins/StartMenu/: dropdown.vue  index.vue
src/components/plugins/Temperature/: index.vue
src/components/plugins/Time/: index.vue
src/components/plugins/Workspaces/: index.vue  item.vue  window.vue
src/plugins/: state.js  state.ts
src/service/: socket.js  socket.ts
src/store/: index.js  index.ts  settings.ts  socket.js
src/themes/: ayu.json  srcery.json
